--- a/RHB EDM/index.html
+++ b/RHB EDM/index.html
@@ -254,6 +254,59 @@
                     </table>
                 </td>
             </tr>
+            <!-- THREE COLUMN SECTION -->
+            <tr>
+                <td>
+                    <table width="100%">
+                        <tr>
+                            <td class="three-columns">
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href=""><img src="img/ecommerce.jpg" alt="" width="110px"
+                                                                style="max-width: 110px; border-radius: 55px;"></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="padding: 10px;">
+                                                        <p style="font-weight: bold; font-size: 17px;">Ecommerce</p>
+                                                        <p>Responsive HTML Email Template Courrse to master email
+                                                            development</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <table class="column">
+                                    <tr>
+                                        <td class="padding">
+                                            <table class="content">
+                                                <tr>
+                                                    <td>
+                                                        <a href=""><img src="img/web-design.jpg" alt="" width="110px"
+                                                                style="max-width: 110px; border-radius: 55px;"></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="padding: 10px;">
+                                                        <p style="font-weight: bold; font-size: 17px;">Web Design</p>
+                                                        <p>Responsive HTML Email Template Courrse to master email
+                                                            development</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
             <!-- SLIDER -->
             <tr>
                 <td>
