--- a/RHB EDM/index.html
+++ b/RHB EDM/index.html
@@ -145,6 +145,27 @@
             -webkit-transform: rotate(-45deg);
                     transform: rotate(-45deg);
             }
+
+            .qr-table {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+            }
+
+            .qr-table td, .qr-table th {
+            border: 1px solid #ddd;
+            padding: 8px;
+            }
+/* 
+            #qr-table tr:nth-child(even){background-color: #f2f2f2;}
+
+            #qr-table tr:hover {background-color: #ddd;} */
+
+            .qr-table th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            }
     </style>
 </head>
 
@@ -254,10 +275,50 @@
                     </table>
                 </td>
             </tr>
-            <!-- THREE COLUMN SECTION -->
+            <!-- DUITNOW TABLE SECTION -->
             <tr>
                 <td>
-                    <table width="100%">
+                    <table width="100%" style="padding: 20px;">
+                        <tr>
+                            <td>
+                                <table style="padding: 20px; background-color: rgb(112, 205, 227,0.3);">
+                                    
+                                    <tr>
+                                        <td>
+                                            <p style="text-align: center; color: #0067B1; font-size: 18px; font-weight: bold;"> Pay with DuitNow QR to gain entries.</p>
+                                            <table style="padding: 20px;">
+                                                <div style="width: 100px; height: 50px; clip-path: polygon(0 0, 100% 0, 89% 93%, 0 86%); background: #FFFFFF;">
+                                                    <tr>
+                                                        <td>
+                                                            <table width="90%" style="border-collapse: collapse;" class="qr-table">
+                                                                <tr style="background-color: #5BC2E7; color: #0067B1;">
+                                                                  <th>Type of transactions </th>
+                                                                  <th>Minimum amount</th>
+                                                                  <th>No of entries</th>
+                                                                </tr>
+                                                                <tr>
+                                                                  <td style="background-color: #0067B1; color: #FFFFFF;">Download and sign up for  Mobile Banking App </td>
+                                                                  <td style="background-color: rgb(112, 205, 227,0.3); color: #0067B1;" >Not Applicable</td>
+                                                                  <td style="background-color: rgb(112, 205, 227,0.3); color: #0067B1;" >5 (one-off) </td>
+                                                                </tr>
+                                                                <tr>
+                                                                  <td style="background-color: #0067B1; color: #FFFFFF;">DuitNow QR payment</td>
+                                                                  <td style="background-color: rgb(112, 205, 227,0.3); color: #0067B1;">RM10</td>
+                                                                  <td style="background-color: rgb(112, 205, 227,0.3); color: #0067B1;">3</td>
+                                                                </tr>
+                                                            </table>
+                                                        </td>
+                                                    </tr></div>
+                                                
+                                            </table>
+
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                    <!-- <table width="100%">
                         <tr>
                             <td class="three-columns">
                                 <table class="column">
@@ -304,7 +365,7 @@
                                 </table>
                             </td>
                         </tr>
-                    </table>
+                    </table> -->
                 </td>
             </tr>
             <!-- SLIDER -->
