update 0.5: update mobile

--- a/TNB NEW/index.html
+++ b/TNB NEW/index.html
@@ -176,7 +176,7 @@
                 <div class="cover-description">
                     <h1>A Better Today.<br>
                         A Brighter Tomorrow.</h1>
-                    <p>At Tenaga Nasional Berhad (TNB), we believe that sustainability is <br>the key to a thriving
+                    <p>At Tenaga Nasional Berhad (TNB), we believe that sustainability is the key to a thriving
                         planet. </p>
                 </div>
             </div>
@@ -389,8 +389,6 @@
             </div>
         </div>
     </section>
-
-
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 
 </body>
