--- a/TNB NEW/index.html
+++ b/TNB NEW/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="container-fluid">
             <div class="collapse navbar-collapse flex-column bg-nav1" id="first-nav">
-                <ul class="navbar-nav  w-100 justify-content-left px-3">
+                <ul class="navbar-nav scrolling-wrapper w-100 justify-content-left px-3">
                     <li class="nav-item active">
                         <a class="nav-link" href="#"><img src="assets/img/icon/prihatin-icon.png" class="nav-icon">
                             PERIHATIN/PERMAI</a>
@@ -126,7 +126,7 @@
                 </ul>
             </div>
         </div>
-        <div class="search-area col-md-4 mobile-hide">
+        <div class="search-area col-md-3 mobile-hide">
             <div class="input-group rounded">
                 <input type="search" class="form-control border-dark rounded-0 inner-shadow" placeholder="Search"
                     aria-label="Search" aria-describedby="search-addon" />
@@ -168,19 +168,22 @@
         </nav>
     </div>
     <section class="section1 row no-gutters align-items-center">
-        <div class="parallax-one cover-content">
-            <div class="container-fluid p-0">
-                <div class="cover-category">
-                    <p>Sustainability</p>
-                </div>
-                <div class="cover-description">
-                    <h1>A Better Today.<br>
-                        A Brighter Tomorrow.</h1>
-                    <p>At Tenaga Nasional Berhad (TNB), we believe that sustainability is the key to a thriving
-                        planet. </p>
+        <div style="position: relative;">
+            <div class="parallax-one cover-content">
+                <div class="container-fluid p-0">
+                    <div class="cover-category">
+                        <p>Sustainability</p>
+                    </div>
+                    <div class="cover-description">
+                        <h1>A Better Today.<br>
+                            A Brighter Tomorrow.</h1>
+                        <p>At Tenaga Nasional Berhad (TNB), we believe that sustainability is the key to a thriving
+                            planet. </p>
+                    </div>
                 </div>
             </div>
         </div>
+        
     </section>
     <section class="section2">
         <div class="description-block">
