--- a/TNB NEW/index.html
+++ b/TNB NEW/index.html
@@ -41,7 +41,7 @@
             <div class="col-md-3 my-auto mobile-hide">
                 <div class="right-notibar">
                     <ul class="list-group list-group-horizontal mb-0">
-                        <li class="list-group-item border-0 bg-top p-0 m-auto">
+                        <li class="list-group-item border-0 bg-top p-0 m-auto flex-item">
                             <a class="nav-link" href="#"><img src="assets/img/icon/followus-icon.png"
                                     class="nav-icon-followus"> Follow Us</a>
                         </li>
@@ -58,7 +58,7 @@
     </div>
     <nav class="navbar navbar-expand-md navbar-dark bg-nav sticky-top">
         <div class="row d-flex align-items-left">
-            <div style="padding-left: 30px; width: 300px;">
+            <div class="logo-header">
                 <a href="#"><img src="assets/img/logo/logo-tnb.png" alt="" width=100"></a>
                 <a href="#"><img src="assets/img/logo/boty18.png" alt="" width="50"></a>
             </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="container-fluid">
             <div class="collapse navbar-collapse flex-column bg-nav1" id="first-nav">
-                <ul class="navbar-nav scrolling-wrapper w-100 justify-content-left px-3">
+                <ul class="navbar-nav main-nav w-100 justify-content-left px-3">
                     <li class="nav-item active">
                         <a class="nav-link" href="#"><img src="assets/img/icon/prihatin-icon.png" class="nav-icon">
                             PERIHATIN/PERMAI</a>
@@ -139,10 +139,10 @@
     <div class="col-md-12 mobile-hide" style="margin-top: -35px;">
         <nav class="navbar navbar-expand-lg navbar-dark bg-nav2" aria-label="Tenth navbar example">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#second-nav"
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#second-nav"
                     aria-controls="second-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
                 <div class="collapse navbar-collapse justify-content-md-center" id="second-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -367,7 +367,7 @@
     <section class="section7">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-10 offset-md-0 offset-sm-1 px-0 ">
-                <div class="image-post"> <img src="assets/img/posts/post1.png" alt="">
+                <div class="image-post"> <img src="assets/img/posts/post1-1.png" alt="">
                     <div class="overlay">
                         <h3>OUR APPROACH</h3>
                         <a href="#">Find out more</a>
