update 0.5: email list

--- a/RHB EDM/index.html
+++ b/RHB EDM/index.html
@@ -290,7 +290,7 @@
             }
 
             .label-list {
-                padding: 610px 0 0 150px !important;
+                padding: 630px 0 0 150px !important;
             }
 
             .qr-image-section {
@@ -518,7 +518,7 @@
                     </div>
                     <!-- TEST -->
                     <!-- Content to be switched -->
-                    <div class="slide slide1" style="background-color: rgb(112, 205, 227,0.1);">
+                    <div class="slide slide1" style=" margin-top: 30px; background-color: rgb(112, 205, 227,0.1);">
                         <!-- STEP 1 -->
                         <table width="100%" class="frame1">
                             <tr>
@@ -530,7 +530,7 @@
                                                 <table class="content">
                                                     <tr>
                                                         <td>
-                                                            <p style="font-size: 40px; font-weight: bold;">How to pay
+                                                            <p style="font-size: 35px; font-weight: bold;">How to pay
                                                                 with DuitNow QR</p>
                                                             <p
                                                                 class="slider-content" style="font-size: 18px; color: #EF3E42 !important; font-weight: bold;">
