--- a/TNB NEW/index.html
+++ b/TNB NEW/index.html
@@ -13,6 +13,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/animation.css">
 
 </head>
 
@@ -174,7 +175,7 @@
                     <div class="cover-category">
                         <p>Sustainability</p>
                     </div>
-                    <div class="cover-description">
+                    <div class="cover-description ">
                         <h1>A Better Today.<br>
                             A Brighter Tomorrow.</h1>
                         <p>At Tenaga Nasional Berhad (TNB), we believe that sustainability is the key to a thriving
